--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="col-lg-8 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
                         <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+528136024090</a>
                         <a href="#" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
                     </div>
                 </div>
@@ -551,10 +551,10 @@
                             <div class="team-img rounded-top h-100">
                                 <img src="img/team-1.jpg" class="img-fluid rounded-top w-100" alt="">
                                 <div class="team-icon d-flex justify-content-center">
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/katzenVet"><i class="fab fa-facebook-f"></i></a>
+                                    <!--<a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>-->
+                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/katzen_vet/"><i class="fab fa-instagram"></i></a>
+                                    <!--<a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>-->
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
@@ -568,10 +568,10 @@
                             <div class="team-img rounded-top h-100">
                                 <img src="img/team-2.jpg" class="img-fluid rounded-top w-100" alt="">
                                 <div class="team-icon d-flex justify-content-center">
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/katzenVet"><i class="fab fa-facebook-f"></i></a>
+                                    <!--<a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>-->
+                                    <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/katzen_vet/"><i class="fab fa-instagram"></i></a>
+                                    <!--<a class="btn btn-square btn-primary text-white rounded-circle mx-1" href=""><i class="fab fa-linkedin-in"></i></a>-->
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
